# atlas

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2026_02_06_0001-a1b2c3d4e5f6_initial_tables.py  2026_02_08_0002-b2c3d4e5f6g7_add_notifications_table.py
app/: __init__.py  celery_app.py  config.py  main.py
app/agents/: __init__.py  analysis_agent.py  base_agent.py  coding_agent.py  coding_meta_agent.py  communication_agent.py  creative_agent.py  marketing_agent.py  voice_agent.py  (+3 more)
docker/: Dockerfile
docs/: DEPLOYMENT.md
scripts/: __init__.py  seed_data.py  setup_db.py
tests/: __init__.py  test_abtesting.py  test_access.py  test_activitylog.py  test_adaptation.py  test_adaptive.py  test_ads_monitor.py  test_agent_response.py  test_agentdash.py  test_aiethics.py  test_aisafety.py  test_alembic.py  test_analysis_agent.py  test_api_mgmt.py  test_assettrack.py  test_assistant.py  test_autoneg.py  test_autonomy_models.py  test_availability.py  test_backup.py  test_base_monitor.py  test_bdi_agent.py  test_beliefs.py  test_benchmark.py  test_bizmodel.py  test_bolum4_gateway.py  test_bolum5_performance.py  test_bootstrap_analyzer.py  test_bootstrap_capability.py  test_bootstrap_dependencies.py  test_bootstrap_environment.py  test_bootstrap_installer.py  test_bootstrap_packages.py  test_bootstrap_services.py  test_bootstrap_upgrade.py  test_brandmon.py  test_bridge.py  test_business.py  test_caching.py  test_calendarintel.py  (+203 more)
(+1624 files in other folders)
